<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".presentation.ChooseLevelFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@id/titleTextView"
        style="@style/ChooseLevelTitleTextVew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:text="@string/choose_level_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/testButton"
        style="@style/LevelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/test" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/easyButton"
        style="@style/LevelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:backgroundTint="@color/easyColor"
        android:text="@string/easy" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/normalButton"
        style="@style/LevelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:backgroundTint="@color/normalColor"
        android:text="@string/normal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/hardButton"
        style="@style/LevelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:backgroundTint="@color/hardColor"
        android:text="@string/hard" />

</LinearLayout>